--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,584 +1,60 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap");
-:root {
-  --dark: #101315;
-  --light: #eeeeee;
-  --gradient: linear-gradient(10deg, #ffaa00, #ff6a00);
-  --gradient2: linear-gradient(15deg, #04ea00, #00d17d);
-  --gradient3: linear-gradient(15deg, #b648ff, #ef5dff);
+html {
+  font-size: calc(60% + 0.8vmin);
+}
+main {
+  max-width: 40rem;
+  margin: 0 auto;
+}
+* {
   font-size: 1rem;
 }
-
-.main-page {
-  min-width: 560px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background: var(--dark);
-  font-family: "Montserrat", sans-serif;
-  height: 100%;
-  /* overflow-y: hidden; */
-}
-
-main {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  padding: 2rem;
-  align-items: center;
-  overflow-y: hidden;
-}
-
 h1 {
-  color: #ff9d00;
-  font-size: 175%;
-  font-weight: 400;
-  font-family: "Quicksand";
+  font-size: 2.2rem;
 }
-
 h2 {
-  font-weight: 500;
-  font-size: 150%;
-  letter-spacing: 0;
-  font-family: "Montserrat", sans-serif;
-}
-.h1-title {
-  font-weight: bold;
-  font-size: 250%;
-  letter-spacing: 0;
-  font-family: "Audiowide", sans-serif;
+  font-size: 1.6rem;
 }
 
 h3 {
-  text-align: center;
-  color: #9e9e9e;
-  font-weight: 700;
-  font-size: 2rem;
-  letter-spacing: 1px;
-  font-family: "Quicksand";
-  padding: 2rem 0 1.5rem 0;
-  margin: 0;
-  text-transform: capitalize;
+  font-size: 1.3rem;
 }
 
-h4 {
-  text-align: center;
-  color: #9e9e9e;
-  font-family: "Quicksand";
-  font-weight: 700;
-  font-size: 1.5rem;
-  letter-spacing: 1px;
-  margin: 0;
-  text-transform: capitalize;
+.app-container {
+  display: flex;
+  background-color: #f1c93b;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  gap: 1rem;
 }
 
-h5 {
-  text-align: center;
-  color: #9e9e9e;
-  font-weight: 500;
-  font-size: 130%;
-  text-align: justify;
-  letter-spacing: 0;
-  font-family: "Quicksand";
-  padding: 0;
-  line-height: 125%;
-  margin: 0;
-}
-
-kbd {
-  background: #eee;
-  border-radius: 3px;
-  border: 1px solid #b4b4b4;
-  box-shadow: 0 1px 1px #00000028, 0 2px 0 0 #ffffffc3 inset;
-  color: #131313;
+.button-login {
   display: inline-block;
-  font-size: 0.85em;
-  font-weight: 700;
-  line-height: 1;
-  padding: 2px 4px;
-  white-space: nowrap;
-  margin: auto;
-}
-
-button {
-  width: auto;
-  height: 3rem;
-  border: none;
-  outline: none;
-  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  border: 2px solid #1a5d1a; /* Outline color */
+  border-radius: 2rem; /* Border radius */
+  font-size: 1rem;
   font-weight: 600;
-  font-size: 1.25rem;
-  letter-spacing: 1.25px;
-  cursor: default;
-  font-family: "Montserrat", sans-serif;
-}
-
-.backdrop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: #000000e1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow-y: hidden;
-}
-
-.modal {
-  width: clamp(50%, 700px, 90%);
-  height: min(50%, 350px);
-  color: #101111;
-  margin: auto;
-  padding: 0 2rem;
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
-.login-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-button {
-  display: flex;
-  gap: 40px;
-}
-
-.form-group label {
-  font-weight: bold;
-}
-
-.form-group input {
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.orange-gradient {
-  background: var(--gradient);
-}
-
-.green-gradient {
-  background: var(--gradient2);
-}
-
-.pink {
-  color: #c273ff;
-}
-
-.gray {
-  color: #666666;
-}
-
-.light-blue {
-  color: #00b7ff;
-}
-
-.modal-button {
-  position: relative;
-  bottom: 1.5rem;
-  padding: 0 3rem;
-  min-height: 3rem;
-  margin: auto auto 0 auto;
-  background: var(--dark);
-  color: var(--light);
-}
-
-.save-button {
-  padding: 0 1rem;
-  margin: 2rem auto auto 0;
-  background: var(--gradient);
-  color: var(--dark);
-}
-
-.close-button {
-  padding: 0 2rem;
-  height: 2.5rem;
-  margin: 2rem auto 1rem 0;
-  background: #101111;
-  /* border: 1px dashed #9a9a9a99; */
-  color: #ffaa00;
-  border-radius: 4px;
-  transition: background ease 400ms;
-  box-shadow: 1px 1px 15px #03030399;
-}
-
-.input,
-input {
-  width: calc(100vw - 5rem);
-  height: 3rem;
-  margin: 0 auto 0 0;
-  padding: 0.25rem 0.5rem;
-  outline: none;
-  background: var(--dark);
-  border: 2px solid #ff9d00;
-  border-radius: 6px;
-  color: #ff9d00;
-  font-size: 1.25rem;
-  font-weight: 400;
-  font-family: "Montserrat", sans-serif;
-}
-
-::placeholder {
-  font-style: italic;
-}
-
-.container {
-  display: flex;
-  width: 50vw;
-  height: 50%;
-  margin: auto;
-}
-
-.bottom {
-  justify-content: flex-end;
-}
-
-.top {
-  justify-content: flex-start;
-}
-
-.notification-text {
-  margin: auto auto auto 0;
-  padding: 0;
-  font-size: 100%;
-  font-weight: 600;
-  letter-spacing: 0.25px;
-  font-family: "Montserrat", sans-serif;
-}
-
-.add-button {
-  padding: 0 1rem;
-  margin: 2rem auto auto 0;
-  background: var(--gradient2);
-  color: var(--dark);
-}
-
-.close {
-  height: 1.1rem;
-  background: transparent;
-  border: none;
-  outline: none;
-  margin: 0 0 0 auto;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.close svg {
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
-}
-
-.sub-header {
-  margin: 1rem auto 1rem 0;
-  color: #9e9e9e;
-}
-
-@media screen and (min-width: 960px) {
-  button {
-    cursor: pointer;
-  }
-  /* .modal {
-    width: 750px;
-    height: 300px;
-  } */
-  .input,
-  input {
-    width: calc(25vw);
-  }
-  h1 {
-    color: #ff9d00;
-    font-size: 250%;
-  }
-}
-
-.backdrop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: #000000e1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.navbar-container {
-  /* border-style: solid;
-  border-color: #9e9e9e; */
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  height: 10vh;
-  margin: 20px;
-  gap: 40px;
-  position: relative;
-}
-
-.h1-title::after {
-  content: "";
-  position: absolute;
-  bottom: -2px; /* Adjust this value to control the distance of the line from the text */
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: rgb(
-    202,
-    202,
-    202
-  ); /* Change this color to the desired line color */
-
-  /* Add glowing shadow effect */
-  box-shadow: 0 0 5px 5px rgba(179, 179, 179, 0.2);
-}
-
-.body-container {
-  margin: 20px;
-}
-
-img {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.navbar-items {
-  /* border-color: #9e9e9e;
-  border-style: solid; */
-  width: 60px;
-  height: 60px;
-  margin-left: 20px;
-}
-
-.home-container {
-  /* border-style: solid;
-  border-color: #9e9e9e; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.player-container {
-  margin-top: 20px;
-  border-color: #9e9e9e;
-  border-style: solid;
-  height: 70vh;
-  width: 80vw;
-}
-
-.main-control {
-  padding: 10px;
-  gap: 40px;
-  display: flex;
-  margin-top: 10px;
-  border-color: #9e9e9e;
-  border-style: solid;
-  height: 20vh;
-  width: 75vw;
-}
-
-.slider-container {
-  /* border-style: solid;
-  border-color: #9e9e9e; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.carousel {
-  /* border-style: solid;
-  border-color: #9e9e9e; */
-  justify-content: center;
-  align-items: center;
-  cursor: grab;
-  overflow: hidden;
-  width: 70%;
-  min-width: 30rem;
-  border-radius: 2rem;
-  position: relative;
-  margin-bottom: 20px;
-}
-
-.inner-carousel {
-  margin-top: 20px;
-  display: flex;
-  gap: 20px;
-}
-
-.item img {
-  border-radius: 2rem;
-  pointer-events: none;
-}
-
-.item {
-  min-width: 30rem;
-  min-height: 35rem;
-  width: 100%;
-  height: 100%;
-}
-
-.c-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 1;
-}
-
-.previous-button {
-  left: 0;
-}
-
-.next-button {
-  right: 0;
-}
-
-.aha-button1 {
-  margin: 20px 0 0 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-family: "Quicksand";
+  color: #1a5d1a; /* Text color */
   background-color: transparent;
-  font-size: 50px;
-  border: 2px solid;
-  border-radius: 2rem;
-  padding: 10px 20px;
-  color: #ffaa00;
   cursor: pointer;
-  /* Increase the width as needed */
-  width: 350px;
-  height: 100px;
 }
 
-.aha-button2 {
+.page-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  font-family: "Quicksand";
-  background-color: transparent;
-  font-size: 20px;
-  border: 2px solid;
-  border-radius: 2rem;
-  padding: 10px 20px;
-  color: #ffaa00;
-  cursor: pointer;
-  /* Increase the width as needed */
-  width: auto;
+  gap: 1rem;
 }
 
-.button-container-navbar {
-  position: absolute;
-  right: 20px;
-}
-
-.article-containerRight {
-  border-style: solid;
-  border-color: #97979744;
-  border-radius: 2rem;
-  border-width: 1px;
-  padding: 10px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 20%;
-  width: 40%;
-  color: #ffffff;
-  font-family: "Quicksand";
-}
-
-.article-containerLeft {
-  border-style: solid;
-  border-color: #97979744;
-  border-radius: 2rem;
-  border-width: 1px;
-  padding: 10px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-right: 20%;
-  width: 40%;
-  color: #ffffff;
-  font-family: "Quicksand";
-}
-
-.list-container {
-  /* border: 1px solid #ccc; */
-  color: #ffffff;
-  padding: 10px;
-  margin: 10px;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-li {
-  padding: 5px 0;
-  border-bottom: 1px solid #cccccc21;
-}
-
-li:last-child {
-  border-bottom: none;
-}
-
-.log-reg {
+.footer-container {
   display: flex;
-  gap: 20px;
-}
-
-.card {
-  color: #ffffff;
-  width: 500px;
-  min-width: 200px;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #9292929d;
-  overflow: hidden;
-}
-
-.card-image {
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
   width: 100%;
-  height: 210px;
-  object-fit: cover;
-}
-
-.card-content {
-  padding: 16px;
-}
-
-.card-title {
-  font-size: 24px;
-  margin-bottom: 8px;
-}
-
-.card-description {
-  font-size: 14px;
-  color: #ffffff42;
-}
-
-.card-container {
-  display: flex;
-  gap: 40px;
+  background-color: #f1c93b;
+  padding: 1rem;
+  text-align: center;
 }
